--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 
@@ -35,6 +36,9 @@ body{
     width: 100px;
     background-color: rgb(196, 181, 211);
     display: flex;
+    font-size: 15px;
+    line-height: 19px;
+    font-weight: 600;
     justify-content: center;
     align-items: center;
 }
@@ -77,4 +81,81 @@ body{
 
 table tr {
     transition: 0.5s
+}
+.chooseColor{
+    display: flex;
+    
+    
+}
+.color{
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    cursor:pointer;
+    border:2px solid #fff;
+    margin: 3px;
+}
+
+#showSettingsPanel{
+    width: 600px;
+    height: 400px;
+    background-color: #F7F7F7;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-top:50px;
+    flex-direction: column;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+    z-index: 9999;
+}
+
+.closePanel{
+    padding: 0.3rem 0.5rem;
+    border-radius: 7px;
+    background: red;
+    color: white;
+    position: absolute;
+    top: 0px;
+    right: 2px;
+    cursor: pointer;
+}
+
+.remove {
+    transform: translateX(600px);
+    opacity: 0.3;
+    background: black!important;
+}
+.buttons{
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-between;
+    align-items: center;
+
+
+}
+textarea{
+    
+    width: 95%;
+    border: 1px solid #c7c5c5 ;
+    font-size: larger;
+}
+
+.btn{
+    width: 200px;
+    height: 40px;
+    border: none;
+    background-color: #FFFFFF;
+    border-radius: 5px;
+    margin: 5px;
+    font-size:18px;
+    cursor: pointer;
+}
+.btn:hover{
+    transition: 0.5s;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
