--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body{
     width: auto;
     padding:5px;
     align-items: center;
-    height: 650px;
+    height:auto;
     background-color:rgb(0, 0, 0) ;
 }
 
