--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,9 @@ table tr {
     cursor:pointer;
     border:2px solid #fff;
     margin: 3px;
+}.color:hover{
+    
+    transform: scale(1.3); 
 }
 
 #showSettingsPanel{
@@ -139,7 +142,7 @@ table tr {
 
 }
 textarea{
-    
+    padding:10px;
     width: 95%;
     border: 1px solid #c7c5c5 ;
     font-size: larger;
@@ -158,4 +161,7 @@ textarea{
 .btn:hover{
     transition: 0.5s;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+.activeColor{
+    border: 2px solid black;
 }
