--- a/styles.css
+++ b/styles.css
@@ -8,27 +8,32 @@
 
 body{
     display: flex;
-    justify-content: center;
+    margin: 0;
+    display: flex;
+    width: 100vw;
+    height: 100vh;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
 .tierList{
-    flex-direction: column;
     display: flex;
-    width: auto;
-    padding:5px;
+    flex-direction: column;
     align-items: center;
-    height:auto;
-    background-color:rgb(0, 0, 0) ;
+    justify-content: space-between;
+    padding: 10px;
+    width: auto;
+    height: auto;
+    background-color: rgb(0, 0, 0);
 }
 
 .row{
-    margin-bottom: 3px;
-    width: 70vw;
+    display: flex;
+    width: 75vw;
     height: 100px;
     background-color:#1A1A17;
-    display: flex;
+    
 }
 
 .label {
@@ -45,12 +50,15 @@ body{
 
 
 .item{
-    height:100% ;
+    height:100px ;
     width: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: white;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain; /* Resmi div'in içine sığdır */
 }
 
 .moveUpBtn,.moveDownBtn,.settingsBtn{
@@ -164,4 +172,18 @@ textarea{
 }
 .activeColor{
     border: 2px solid black;
+}
+.items{
+    
+    width: 900px;
+    height: 200px;
+    background-color: #c7c5c5;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+ 
+
+img{
+    width: 100%;
 }
